# previs-es-esportivas

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  dashboard.py  deploy.sh  docker-compose.yml  migrate.py  pyproject.toml  setup.py  sportsedge.service  start_all.bat  start_all.sh  stop_all.sh  verify_db.py  verify_system.py
analysis/: backtester.py
backtest/: fetch_historical.py  run_backtest.py
core/: ai_orchestrator.py  backtesting.py  comissao.py  database.py  health_check.py  kelly.py  logger.py  odds_monitor.py  scheduler.py  settler.py  telegram_bot.py
dashboard/: app.py  styles.css
nginx/conf.d/: default.conf
scratch/: diagnose_games.py  test_leagues.py
sports/: basketball.py  esports.py  football.py  tennis.py  volleyball.py
src/: __init__.py  ai_analyzer.py  automation.py  ev_calculator.py  historical_importer.py  kelly.py  news_monitor.py  odds_fetcher.py  pandascore_fetcher.py  results_settler.py  setup_telegram.py  telegram_bot.py
utils/: config.py
