[project]
name = "sports-edge-ai"
version = "0.1.0"
description = "Sistema de análise de apostas esportivas com IA (Claude) e cálculo de Expected Value"
authors = [{ name = "Sports Edge AI" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "apscheduler>=3.10.0",
    "feedparser>=6.0.11",
    "openai>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
